Admission-Controller/restrict-image-registries.yaml
sudo nano /etc/kubernetes/manifests/kube-apiserver.yaml
- --enable-admission-plugins=NodeRestriction,PodSecurity,MutatingAdmissionWebhook,ValidatingAdmissionWebhook
-------------------------------
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
spec:
  validationFailureAction: enforce
  rules:
    - name: validate-allowed-registries
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Only images from registry.mycorp.local are allowed"
        pattern:
          spec:
            containers:
              - image: "registry.mycorp.local/*"
